# proyecto-servidor

./: .env  Cargo.toml  diesel.toml  sql.db
migrations/2024-12-01-003615_create_users_and_posts/: down.sql  up.sql
src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
